feat: ajout de la vérification par lots et amélioration de la documentation - Nouveau module batch_verify pour vérification visuelle - Interface graphique avec grille configurable - Mise à jour du README avec instructions détaillées - Ajout des fichiers d'installation (setup.py, requirements.txt) - Amélioration de la documentation des commandes

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,19 @@
+# Dossiers de données
+template_photos/
+1_input/
+2_rejected/
+3_validated/
+4_video/
+
+# Python
 __pycache__/
-*.pyc
-.DS_Store
+*.py[cod]
+*$py.class
+.env
 venv/
-*.log
+ENV/
+
+# IDE
+.vscode/
+.idea/
+*.swp
