--- a/package.json
+++ b/package.json
@@ -15,11 +15,9 @@
   "dependencies": {
     "@tensorflow/tfjs": "^4.22.0",
     "@vladmandic/face-api": "^1.7.15",
-    "canvas": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^4.21.0",
-    "multer": "^2.1.0",
-    "sharp": "^0.33.5"
+    "multer": "^2.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
