--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tensorflow/tfjs": "^4.22.0",
     "@vladmandic/face-api": "^1.7.15",
     "cors": "^2.8.5",
+    "exifr": "^7.1.3",
     "express": "^4.21.0",
     "multer": "^2.1.0"
   },
