--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "cors": "^2.8.5",
     "exifr": "^7.1.3",
     "express": "^4.21.0",
-    "multer": "^2.1.0"
+    "multer": "^2.1.0",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
