Vidéo: xfade via script, fallback si FFmpeg < 4.3, bouton Génération vidéo lance génération
- videoService: filter_complex_script pour éviter ARG_MAX, fallback concat si xfade absent
- VideoStep: clic sur onglet Génération vidéo lance la génération si déjà actif
- Extraction: proxy timeout 5 min, gestion erreurs réseau, hint enregistrement en fin
- extract/complete: multer.any() pour accepter champs rejected/validatedSourceNames (fix Unexpected field), max 5000 fichiers
- package.json: build:server, dev:server:compiled

Made-with: Cursor

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "type": "module",
   "scripts": {
     "build": "tsc -p server && vite build",
+    "build:server": "tsc -p server",
     "dev": "node scripts/dev.js",
     "dev:server": "tsx watch server/src/index.ts",
+    "dev:server:compiled": "node --watch server/dist/index.js",
     "dev:client": "vite",
     "start": "node server/dist/index.js",
     "prestart": "npm run build",
